<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    tools:context=".view.subscription.SubscriptionDialogActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/semi_rounded_button"
        android:backgroundTint="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_subscription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/string_subscription_expired"
            android:textAllCaps="true"
            android:textColor="@color/colorTextDarkGrey"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView20" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/string_extend_subscription_subtitle"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/textView37"
            app:layout_constraintStart_toStartOf="@+id/textView37"
            app:layout_constraintTop_toBottomOf="@+id/textView37" />

        <Button
            android:id="@+id/btn_extend"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/semi_rounded_button"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/string_extend"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView38"
            app:layout_constraintStart_toStartOf="@+id/textView38"
            app:layout_constraintTop_toBottomOf="@+id/textView38" />

    </LinearLayout>

</RelativeLayout>