<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#40000000"
    tools:context=".view.subscription.SubscriptionDialogActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_subscription"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/string_subscription_expired"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/colorTextDarkGrey"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView20" />

            <TextView
                android:id="@+id/textView38"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/string_extend_subscription_subtitle"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/textView37"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="@+id/textView37"
                app:layout_constraintTop_toBottomOf="@+id/textView37" />

            <Button
                android:id="@+id/btn_extend"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/semi_rounded_button"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/string_extend"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView37"
                app:layout_constraintStart_toStartOf="@+id/textView37"
                app:layout_constraintTop_toBottomOf="@+id/textView38" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>