<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="48dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_send_otp"
                    app:layout_constraintVertical_bias="1.0">

                    <TextView
                        android:id="@+id/textView34"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Don't Have an Account?" />

                    <TextView
                        android:id="@+id/tv_login_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="0dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/string_signup"
                        android:textColor="@color/colorPrimary" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginTop="72dp"
                    android:src="@drawable/ic_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/string_signin"
                    android:textColor="@color/colorTextDarkGrey"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView21" />

                <TextView
                    android:id="@+id/textView45"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="48dp"
                    android:text="@string/string_login_subtitle"
                    android:textAlignment="center"
                    android:textColor="#8c8c8c"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView44" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout5"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="68dp"
                    android:background="@drawable/bg_editext_grey"
                    app:layout_constraintEnd_toEndOf="@+id/textView45"
                    app:layout_constraintStart_toStartOf="@+id/textView45"
                    app:layout_constraintTop_toBottomOf="@+id/textView45">

                    <TextView
                        android:id="@+id/textView46"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/roboto_medium"
                        android:text="+62"
                        android:textColor="@color/colorPrimary"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_phone_number"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginEnd="16dp"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/string_enter_phone_number"
                        android:inputType="phone"
                        android:paddingStart="16sp"
                        android:paddingEnd="16sp"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView46"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_send_otp"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/semi_rounded_button"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/string_send_otp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout5"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout5"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout5" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>